--- a/example/.htaccess
+++ b/example/.htaccess
@@ -5,3 +5,5 @@ RewriteCond %{REQUEST_FILENAME}\.php	-f
 RewriteRule ^([^/]*)$	$1.php
 
 RewriteRule ^admin/([^/]*)/?$				admin.php?page=$1
+RewriteRule ^admin/page/([^/]*)/?$			admin.php?page=page&action=$1
+RewriteRule ^admin/page/([^/]*)/([^/]*)/?$	admin.php?page=page&action=$1&filename=$2
